@@ -418,7 +418,8 @@ sub new {
         return $self;
     }
 
-    # Handle hexadecimal numbers.
+    # Handle hexadecimal numbers. We auto-detect hexadecimal numbers if they
+    # have a "0x" or "0X" prefix.
 
     if ($wanted =~ /^\s*[+-]?0[Xx]/) {
         $self = $class -> from_hex($wanted);
@@ -426,7 +427,42 @@ sub new {
         return $self;
     }
 
-    # Handle binary numbers.
+    # Handle octal numbers. We auto-detect octal numbers if they have a "0"
+    # prefix and a binary exponent.
+
+    if ($wanted =~ /
+                       ^
+                       \s*
+
+                       # sign
+                       [+-]?
+
+                       # prefix
+                       0
+
+                       # significand using the octal digits 0..7
+                       [0-7]+ (?: _ [0-7]+ )*
+                       (?:
+                           \.
+                           (?: [0-7]+ (?: _ [0-7]+ )* )?
+                       )?
+
+                       # exponent (power of 2) using decimal digits
+                       [Pp]
+                       [+-]?
+                       \d+ (?: _ \d+ )*
+
+                       \s*
+                       $
+                 /x)
+    {
+        $self = $class -> from_oct($wanted);
+        $self->round(@r) unless @r >= 2 && !defined $r[0] && !defined $r[1];
+        return $self;
+    }
+
+    # Handle binary numbers. We auto-detect binary numbers if they have a "0b"
+    # or "0B" prefix.
 
     if ($wanted =~ /^\s*[+-]?0[Bb]/) {
         $self = $class -> from_bin($wanted);
